fix(material/formbuilder): Small css fixes to visibility condition overflow and formtree properties.

--- a/projects/material/form-builder/src/form-builder.scss
+++ b/projects/material/form-builder/src/form-builder.scss
@@ -42,6 +42,10 @@ ajf-form-builder {
     .ajf-formtree-properties {
       flex: 0 1 auto;
       max-width: 20%;
+      max-height: 60vh;
+      overflow-y: auto;
+      position: sticky;
+      top: 32px;
     }
   }
 
